# homeotopy

./: README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml  python-package.yml  release.yml  static.yml
homeotopy/: _ball.py
