[project]
name = "homeotopy"
version = "0.6.1"
description = "A library for computing homeomorphisms between some common standard topologies"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["numba>=0.61.0", "numpy>=2.0"]
keywords = [
    "homeomorphism",
    "sphere",
    "hypersphere",
    "cube",
    "hypercube",
    "simplex",
]

[project.urls]
homepage = "https://github.com/hafaio/homeotopy"
documentation = "https://hafaio.github.io/homeotopy"
repository = "https://github.com/hafaio/homeotopy"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "myst-parser>=4.0.0",
    "pyright>=1.1.398",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
    "sphinx>=8.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
strict = ["homeotopy", "tests"]

[tool.ruff.lint]
extend-select = ["I", "D", "A", "B", "W", "PL", "UP", "FIX"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"

[tool.uv]
keyring-provider = "subprocess"
