[project]
name = "homeotopy"
version = "0.6.0"
description = "A library for computing homeomorphisms between some common standard topologies"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["numba>=0.66.0", "numpy>=2.4"]
keywords = [
    "homeomorphism",
    "sphere",
    "hypersphere",
    "cube",
    "hypercube",
    "simplex",
]

[project.urls]
homepage = "https://github.com/hafaio/homeotopy"
documentation = "https://hafaio.github.io/homeotopy"
repository = "https://github.com/hafaio/homeotopy"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "myst-parser>=5.1.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "sphinx>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
strict = ["homeotopy", "tests"]

[tool.ruff.lint]
extend-select = ["I", "D", "A", "B", "W", "PL", "UP", "FIX"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"

[tool.uv]
keyring-provider = "subprocess"
